--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@
       </div>
     </footer>
 
+    <script defer src="https://va.vercel-scripts.com/v1/script.debug.js" data-sdkn="vercel-analytics"></script>
     <script src="./app.js"></script>
   </body>
 </html>
