--- a/profile.html
+++ b/profile.html
@@ -354,6 +354,8 @@
         yearElement.textContent = currentYear;
       });
     </script>
+
+    <script defer src="https://va.vercel-scripts.com/v1/script.debug.js" data-sdkn="vercel-analytics"></script>
     <script src="profile.js"></script>
   </body>
 </html>
