--- a/results.html
+++ b/results.html
@@ -87,6 +87,8 @@
         // Set the current year in the footer
         document.getElementById('year').textContent = new Date().getFullYear();
     </script>
+
+    <script defer src="https://va.vercel-scripts.com/v1/script.debug.js" data-sdkn="vercel-analytics"></script>
     <script src="results.js"></script>
 </body>
 </html> 
