--- a/test.html
+++ b/test.html
@@ -112,6 +112,7 @@
         </div>
     </div>
 
+    <script defer src="https://va.vercel-scripts.com/v1/script.debug.js" data-sdkn="vercel-analytics"></script>
     <script src="test.js"></script>
 </body>
 </html> 
