--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
           <a href="/">TestPro</a>
         </div>
         <ul class="nav-links">
-          <li><a href="index.html">Dashboard</a></li>
-          <li><a href="index.html#tests">Tests</a></li>
-          <li><a href="results.html">Results</a></li>
-          <li><a href="profile.html">Profile</a></li>
+          <li><a href="index.html">Asosiy Sahifa</a></li>
+          <li><a href="index.html#tests">Testlar</a></li>
+          <li><a href="results.html">Natijalar</a></li>
+          <li><a href="profile.html">Profil</a></li>
         </ul>
         <button class="mobile-menu-btn" aria-label="Toggle menu">
           <span></span>
@@ -34,15 +34,15 @@
           <h1>Welcome to TestPro</h1>
           <div class="stats-grid">
             <div class="stat-card">
-              <h3>Available Tests</h3>
+              <h3>Mavjud testlar</h3>
               <p class="stat-number">12</p>
             </div>
             <div class="stat-card">
-              <h3>Completed</h3>
+              <h3>O'tilgan testlar</h3>
               <p class="stat-number">5</p>
             </div>
             <div class="stat-card">
-              <h3>Average Score</h3>
+              <h3>O'rtacha ball</h3>
               <p class="stat-number">85%</p>
             </div>
           </div>
@@ -51,12 +51,12 @@
 
       <section id="tests" class="tests-section">
         <div class="container">
-          <h2>Available Tests</h2>
+          <h2>Mavjud testlar</h2>
           <div class="test-filters">
             <button class="filter-btn active">Barchasi</button>
-            <button class="filter-btn">Programming</button>
-            <button class="filter-btn">Mathematics</button>
-            <button class="filter-btn">Logic</button>
+            <button class="filter-btn">Dasturlash</button>
+            <button class="filter-btn">Matematika</button>
+            <button class="filter-btn">Logika</button>
           </div>
           <div class="tests-grid">
             <div class="test-card">
@@ -68,8 +68,8 @@
                 JavaScript dasturlash tilining asosiy tushunchalari
               </p>
               <div class="test-meta">
-                <span class="test-level">Programming</span>
-                <span class="test-questions">20 Savol</span>
+                <span class="test-level">Dasturlash</span>
+                <span class="test-questions">25 Savol</span>
               </div>
               <button class="btn btn-primary start-test">
                 Testni boshlash
@@ -85,8 +85,8 @@
                 Python dasturlash tili va muammolarni yechish
               </p>
               <div class="test-meta">
-                <span class="test-level">Programming</span>
-                <span class="test-questions">25 Savol</span>
+                <span class="test-level">Dasturlash</span>
+                <span class="test-questions">30 Savol</span>
               </div>
               <button class="btn btn-primary start-test">
                 Testni boshlash
@@ -102,7 +102,7 @@
                 Dasturlashda ishlatiladigan ma'lumotlar strukturasi
               </p>
               <div class="test-meta">
-                <span class="test-level">Programming</span>
+                <span class="test-level">Dasturlash</span>
                 <span class="test-questions">30 Savol</span>
               </div>
               <button class="btn btn-primary start-test">
@@ -117,7 +117,7 @@
               </div>
               <p class="test-description">Algebra va matematik formulalar</p>
               <div class="test-meta">
-                <span class="test-level">Mathematics</span>
+                <span class="test-level">Matematika</span>
                 <span class="test-questions">25 Savol</span>
               </div>
               <button class="btn btn-primary start-test">
@@ -134,8 +134,8 @@
                 Geometrik shakllar va ularning xususiyatlari
               </p>
               <div class="test-meta">
-                <span class="test-level">Mathematics</span>
-                <span class="test-questions">20 Savol</span>
+                <span class="test-level">Matematika</span>
+                <span class="test-questions">25 Savol</span>
               </div>
               <button class="btn btn-primary start-test">
                 Testni boshlash
@@ -151,7 +151,7 @@
                 Mantiqiy fikrlash va masalalarni yechish
               </p>
               <div class="test-meta">
-                <span class="test-level">Logic</span>
+                <span class="test-level">Logika</span>
                 <span class="test-questions">30 Savol</span>
               </div>
               <button class="btn btn-primary start-test">
@@ -167,7 +167,7 @@
                 Kibernetika va uning asosiy tushunchalari
               </p>
               <div class="test-meta">
-                <span class="test-level">Mathematics</span>
+                <span class="test-level">Logika</span>
                 <span class="test-questions">30 Savol</span>
               </div>
               <button class="btn btn-primary start-test">
@@ -183,8 +183,8 @@
                 Html va Css asoslari va ularning qo'llanilishi
               </p>
               <div class="test-meta">
-                <span class="test-level">Programming</span>
-                <span class="test-questions">20 Savol</span>
+                <span class="test-level">Dasturlash</span>
+                <span class="test-questions">25 Savol</span>
               </div>
               <button class="btn btn-primary start-test">
                 Testni boshlash
@@ -199,7 +199,7 @@
                 Algoritmlar asoslari va ularning qo'llanilishi
               </p>
               <div class="test-meta">
-                <span class="test-level">Programming</span>
+                <span class="test-level">Dasturlash</span>
                 <span class="test-questions">25 Savol</span>
               </div>
               <button class="btn btn-primary start-test">
@@ -215,7 +215,7 @@
                 Kognitiv mantiq va ularning asosiy tushunchalari
               </p>
               <div class="test-meta">
-                <span class="test-level">Logic</span>
+                <span class="test-level">Logika</span>
                 <span class="test-questions">30 Savol</span>
               </div>
               <button class="btn btn-primary start-test">
@@ -223,36 +223,37 @@
               </button>
             </div>
             <div class="test-card">
-                <div class="test-header">
-                    <h3>Kombinatorika</h3>
-                    <span class="test-duration">30 daqiqa</span>
-                </div>
-                <p class="test-description">
-                    Kombinatorika va uning asosiy tushunchalari
-                </p>
-                <div class="test-meta">
-                    <span class="test-level">Mathematics</span>
-                    <span class="test-questions">20 Savol</span>
-                </div>
-                <button class="btn btn-primary start-test">
-                    Testni boshlash
-                </button>
+              <div class="test-header">
+                <h3>Kombinatorika</h3>
+                <span class="test-duration">30 daqiqa</span>
+              </div>
+              <p class="test-description">
+                Kombinatorika va uning asosiy tushunchalari
+              </p>
+              <div class="test-meta">
+                <span class="test-level">Logika</span>
+                <span class="test-level">Matematika</span>
+                <span class="test-questions">25 Savol</span>
+              </div>
+              <button class="btn btn-primary start-test">
+                Testni boshlash
+              </button>
             </div>
             <div class="test-card">
-                <div class="test-header">
-                    <h3>IQ va Analitik Fikrlash</h3>
-                    <span class="test-duration">45 daqiqa</span>
-                </div>
-                <p class="test-description">
-                    IQ va analitik fikrlash qobiliyatlari
-                </p>
-                <div class="test-meta">
-                    <span class="test-level">Logic</span>
-                    <span class="test-questions">25 Savol</span>
-                </div>
-                <button class="btn btn-primary start-test">
-                    Testni boshlash
-                </button>
+              <div class="test-header">
+                <h3>IQ va Analitik Fikrlash</h3>
+                <span class="test-duration">45 daqiqa</span>
+              </div>
+              <p class="test-description">
+                IQ va analitik fikrlash qobiliyatlari
+              </p>
+              <div class="test-meta">
+                <span class="test-level">Logika</span>
+                <span class="test-questions">25 Savol</span>
+              </div>
+              <button class="btn btn-primary start-test">
+                Testni boshlash
+              </button>
             </div>
           </div>
         </div>
@@ -261,22 +262,28 @@
       <section id="test-modal" class="modal">
         <div class="modal-content">
           <div class="modal-header">
-            <h2>Test Instructions</h2>
+            <h3 class="test-header"></h3>
             <button class="close-modal">&times;</button>
           </div>
           <div class="modal-body">
             <div class="test-info">
-              <h3>JavaScript Basics</h3>
-              <ul class="test-instructions">
-                <li>Total Questions: 20</li>
-                <li>Time Limit: 30 minutes</li>
-                <li>Passing Score: 70%</li>
-                <li>No negative marking</li>
+              <h3>Test haqida</h3>
+              <ul class="test-instructions test-card">
+                <li>Jami savollar: <span class="total-questions"></span></li>
+                <li>Test vaqti: <span class="test-duration"></span></li>
+                <li>Test darajasi: <span class="test-level"></span></li>
+                <li>Salbiy belgi yo'q</li>
               </ul>
             </div>
             <div class="test-actions">
-              <button class="btn btn-secondary">Review Instructions</button>
-              <button class="btn btn-primary">Begin Test</button>
+              <a
+                class="btn btn-secondary"
+                href="https://www.w3schools.com/"
+                target="_blank"
+              >
+                Testni o'qish</a
+              >
+              <button class="btn btn-primary">Testni boshlash</button>
             </div>
           </div>
         </div>
@@ -287,31 +294,44 @@
       <div class="container">
         <div class="footer-content">
           <div class="footer-section">
-            <h4>About TestPro</h4>
-            <p>Your trusted platform for online testing and assessment.</p>
+            <h4>TestPro haqida</h4>
+            <p>
+              Onlayn sinov va baholash uchun ishonchli platformangiz. O'zingizni
+              natijangizni bilib oling.
+            </p>
           </div>
           <div class="footer-section">
-            <h4>Quick Links</h4>
+            <h4>Tezkor havolalar</h4>
             <ul>
-              <li><a href="index.html">Dashboard</a></li>
-              <li><a href="index.html#tests">Tests</a></li>
-              <li><a href="results.html">Results</a></li>
-              <li><a href="profile.html">Profile</a></li>
+              <li><a href="index.html">Asosiy Sahifa</a></li>
+              <li><a href="index.html#tests">Testlar</a></li>
+              <li><a href="results.html">Natijalar</a></li>
+              <li><a href="profile.html">Profil</a></li>
             </ul>
           </div>
           <div class="footer-section">
-            <h4>Contact</h4>
-            <p>Email: support@testpro.com</p>
-            <p>Phone: (123) 456-7890</p>
+            <h4>Aloqa</h4>
+            <p>
+              TestPro, 1234 Test Street, Tashkent, Uzbekistan. <br />
+              Email: support@testpro.com <br />
+              Telefon: (123) 456-7890
+            </p>
           </div>
         </div>
         <div class="footer-bottom">
-          <p>&copy; <span id="year"></span> TestPro. All rights reserved.</p>
+          <p>
+            &copy; <span id="year"></span> TestPro. Barcha huquqlar
+            himoyalangan.
+          </p>
         </div>
       </div>
     </footer>
 
-    <script defer src="https://va.vercel-scripts.com/v1/script.debug.js" data-sdkn="vercel-analytics"></script>
+    <script
+      defer
+      src="https://va.vercel-scripts.com/v1/script.debug.js"
+      data-sdkn="vercel-analytics"
+    ></script>
     <script src="./app.js"></script>
   </body>
 </html>
