--- a/test.html
+++ b/test.html
@@ -4,70 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test - TestPro</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
     <style>
+      :root {
+        --primary-color: #4f46e5;
+        --secondary-color: #6366f1;
+        --light-background: #f9fafb;
+        --border-color: #e5e7eb;
+        --border-radius: 10px;
+        --transition: all 0.3s ease;
+      }
+
+      body {
+        margin: 0;
+        font-family: "Poppins", sans-serif;
+        background: linear-gradient(135deg, #eef2ff, #f9fafb);
+        color: #111827;
+      }
+
       .test-container {
         max-width: 800px;
-        margin: 100px auto;
-        padding: 20px;
+        margin: 60px auto;
+        padding: 30px;
+        background: white;
+        border-radius: 16px;
+        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
       }
 
       .test-header {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        margin-bottom: 30px;
+        margin-bottom: 25px;
+      }
+
+      .test-header h1 {
+        font-size: 1.8rem;
+        font-weight: 600;
+        color: var(--primary-color);
       }
 
       .timer {
-        background-color: var(--primary-color);
-        color: var(--light-background);
-        padding: 10px 20px;
-        border-radius: var(--border-radius);
-        font-size: 1.2rem;
-      }
-
-      .question-container {
-        background-color: white;
-        padding: 20px;
-        border-radius: var(--border-radius);
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        margin-bottom: 20px;
-      }
-
-      .question-text {
-        font-size: 1.2rem;
-        margin-bottom: 20px;
-      }
-
-      .options {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-      }
-
-      .option {
-        padding: 15px;
-        border: 1px solid var(--border-color);
-        border-radius: var(--border-radius);
-        cursor: pointer;
-        transition: var(--transition);
-      }
-
-      .option:hover {
-        background-color: var(--light-background);
-      }
-
-      .option.selected {
-        background-color: var(--primary-color);
+        background: var(--primary-color);
         color: white;
-        border-color: var(--primary-color);
-      }
-
-      .test-controls {
-        display: flex;
-        justify-content: space-between;
-        margin-top: 30px;
+        padding: 10px 18px;
+        border-radius: 8px;
+        font-size: 1rem;
+        font-weight: 600;
+        box-shadow: 0 2px 6px rgba(79, 70, 229, 0.4);
       }
 
       .progress-bar {
@@ -76,17 +63,107 @@
         background-color: var(--light-background);
         border-radius: 5px;
         margin-bottom: 20px;
+        overflow: hidden;
       }
 
       .progress {
         height: 100%;
-        background-color: var(--primary-color);
+        background: linear-gradient(
+          90deg,
+          var(--primary-color),
+          var(--secondary-color)
+        );
         border-radius: 5px;
-        transition: width 0.3s ease;
+        transition: width 0.4s ease;
+      }
+
+      .question-container {
+        background-color: white;
+        padding: 20px;
+        border-radius: var(--border-radius);
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.06);
+        margin-bottom: 25px;
+      }
+
+      .question-text {
+        font-size: 1.2rem;
+        font-weight: 500;
+        margin-bottom: 20px;
+        color: #1f2937;
+      }
+
+      .options {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+      }
+
+      .option {
+        padding: 14px;
+        border: 2px solid var(--border-color);
+        border-radius: 8px;
+        cursor: pointer;
+        transition: var(--transition);
+        font-size: 1rem;
+      }
+
+      .option:hover {
+        border-color: var(--secondary-color);
+        background-color: #eef2ff;
+      }
+
+      .option.selected {
+        background: var(--primary-color);
+        color: white;
+        border-color: var(--primary-color);
+        font-weight: 600;
+        box-shadow: 0 4px 8px rgba(79, 70, 229, 0.4);
+      }
+
+      .test-controls {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 30px;
+      }
+
+      .btn {
+        padding: 12px 24px;
+        border-radius: 8px;
+        font-size: 1rem;
+        font-weight: 500;
+        cursor: pointer;
+        transition: var(--transition);
+        border: none;
+      }
+
+      .btn-primary {
+        background: var(--primary-color);
+        color: white;
+        box-shadow: 0 4px 10px rgba(79, 70, 229, 0.4);
+      }
+
+      .btn-primary:hover {
+        background: var(--secondary-color);
+      }
+
+      .btn-secondary {
+        background: #e5e7eb;
+        color: #111827;
+      }
+
+      .btn-secondary:hover {
+        background: #d1d5db;
+      }
+
+      .btn:disabled {
+        background: #f3f4f6;
+        color: #9ca3af;
+        cursor: not-allowed;
+        box-shadow: none;
       }
     </style>
   </head>
-  <body class="light-theme">
+  <body>
     <div class="test-container">
       <div class="test-header">
         <h1 id="test-title">Test</h1>
@@ -112,11 +189,6 @@
       </div>
     </div>
 
-    <script
-      defer
-      src="https://va.vercel-scripts.com/v1/script.debug.js"
-      data-sdkn="vercel-analytics"
-    ></script>
     <script src="test.js"></script>
   </body>
 </html>
